# Larmsystem

./: .gitignore  AlarmEvent.h  CMakeLists.txt  Component.h  Customer.cpp  Customer.h  Database.h  DatabaseJson.cpp  DatabaseJson.h  DatabaseSqlite3.cpp  DatabaseSqlite3.h  Menu.cpp  Menu.h  README.md  Securitydboriginal.json  Settings.cpp  Settings.h  build.sh  classes.puml  customer.cpp  main.cpp
include/: AlarmEvent.h  Component.h  Customer.h  Database.h  DatabaseJson.h  DatabaseSqlite3.h  Menu.h  Settings.h
src/: AlarmEvent.cpp  Customer.cpp  DatabaseJson.cpp  DatabaseSqlite3.cpp  Menu.cpp  Settings.cpp
